--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <!-- Other links will be added later -->
+                <li><a href="pages/about.html">About</a></li>
+                <li><a href="pages/services.html">Services</a></li>
+                <li><a href="pages/gallery.html">Gallery</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
