Day 2: Create subpages and implement navigation

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - MCAST Website Production</title>
+    <title>About - MCAST Website Production</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <header>
-        <h1>About MCAST</h1>
+        <h1>About Us</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -24,8 +24,8 @@
 
     <main>
         <section>
-            <h2>Our Story</h2>
-            <p>We are dedicated to producing high-quality websites using semantic HTML5 and CSS3.</p>
+            <h2>Who We Are</h2>
+            <p>Welcome to the About page. Here you will find information about our team and mission.</p>
         </section>
     </main>
 
