--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - MCAST Website Production</title>
+    <title>Contact - MCAST Website Production</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -25,8 +25,7 @@
     <main>
         <section>
             <h2>Get in Touch</h2>
-            <p>Have a project in mind? Contact us today.</p>
-            <!-- Form will be added in Day 5 -->
+            <p>Welcome to the Contact page. A contact form will be added here soon.</p>
         </section>
     </main>
 
