--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Project Gallery</h1>
+        <h1>Photo Gallery</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -24,9 +24,8 @@
 
     <main>
         <section>
-            <h2>Our Portfolio</h2>
-            <p>Showcasing our best work in web production.</p>
-            <!-- Images will be added in Day 3/4 -->
+            <h2>Our Work</h2>
+            <p>Welcome to the Gallery page. Check out our latest projects and photos.</p>
         </section>
     </main>
 
