--- a/pages/services.html
+++ b/pages/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services - MCAST Website Production</title>
+    <title>Services - MCAST Website Production</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -24,12 +24,8 @@
 
     <main>
         <section>
-            <h2>What We Do</h2>
-            <ul>
-                <li>Responsive Web Design</li>
-                <li>Semantic HTML5 Development</li>
-                <li>CSS3 Styling and Layouts</li>
-            </ul>
+            <h2>What We Offer</h2>
+            <p>Welcome to the Services page. Explore the variety of services we provide.</p>
         </section>
     </main>
 
