Day 5: Final polish - content update, gallery population, clean filenames

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="container">
-            <h1>Welcome to MCAST</h1>
+            <a href="index.html" aria-label="MCAST Home">
+                <img src="images/logo-white-background.jpg" alt="MCAST Logo" class="logo">
+            </a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -26,8 +28,14 @@
 
     <main>
         <section>
-            <h2>Project Introduction</h2>
-            <p>This project demonstrates semantic HTML5 and CSS3 skills.</p>
+            <h2>The Malta College of Arts, Science and Technology</h2>
+            <img src="images/mcast004.jpg" alt="MCAST Main Campus" class="content-img">
+            <p>Established in 2001, the Malta College of Arts, Science and Technology is the country's leading
+                vocational education and training institution. MCAST offers over 190 full-time courses and over 300
+                part-time vocational courses ranging from certificates to Doctoral level (MQF Level 1 to Level 8).</p>
+            <p>Our mission is to provide universally accessible vocational and professional education and training with
+                an international dimension, responsive to the needs of the individual and the economy.</p>
+            <a href="pages/about.html" class="btn">Learn More About Us</a>
         </section>
     </main>
 
