--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="container">
-            <h1>About Us</h1>
+            <a href="../index.html" aria-label="MCAST Home">
+                <img src="../images/logo-white-background.jpg" alt="MCAST Logo" class="logo">
+            </a>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
@@ -26,8 +28,15 @@
 
     <main>
         <section>
-            <h2>Who We Are</h2>
-            <p>Welcome to the About page. Here you will find information about our team and mission.</p>
+            <h2>Our Mission & History</h2>
+            <img src="../images/erdf164-mcast-campus-002-scaled.jpg" alt="MCAST Campus" class="content-img">
+            <p>MCAST's relationship with industry stimulates the College's success. Its programmes are flexible,
+                relevant, and responsive to the aspirations of the students and to the needs of industries which are
+                constantly evolving to meet the challenges of a changing global economy.</p>
+            <p>The College supports small and medium-sized enterprises through a multidisciplinary approach. This
+                encompasses work-based learning through the Apprenticeships Programme, the various entrepreneurship
+                initiatives, and through MG2i (MCAST's commercial arm) services whereby it provides training courses
+                tailor-made to their needs.</p>
         </section>
     </main>
 
