--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="container">
-            <h1>Contact Us</h1>
+            <a href="../index.html" aria-label="MCAST Home">
+                <img src="../images/logo-white-background.jpg" alt="MCAST Logo" class="logo">
+            </a>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
@@ -27,7 +29,25 @@
     <main>
         <section>
             <h2>Get in Touch</h2>
-            <p>Welcome to the Contact page. A contact form will be added here soon.</p>
+            <form action="mailto:test@example.com" method="post" enctype="text/plain">
+                <div>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div>
+                    <label for="subject">Subject</label>
+                    <input type="text" id="subject" name="subject" required>
+                </div>
+                <div>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="btn">Send Message</button>
+            </form>
         </section>
     </main>
 
