--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="container">
-            <h1>Photo Gallery</h1>
+            <a href="../index.html" aria-label="MCAST Home">
+                <img src="../images/logo-white-background.jpg" alt="MCAST Logo" class="logo">
+            </a>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
@@ -27,7 +29,25 @@
     <main>
         <section>
             <h2>Our Work</h2>
-            <p>Welcome to the Gallery page. Check out our latest projects and photos.</p>
+            <div class="gallery-grid">
+                <img src="../images/mcast004.jpg" alt="MCAST Campus">
+                <img src="../images/football-field-scaled.jpg" alt="Sports Facilities">
+                <img src="../images/zig-6733-scaled.jpg" alt="Student Life">
+                <img src="../images/erdf164-mcast-campus-002-scaled.jpg" alt="MCAST Architecture">
+                <img src="../images/271848137-5050505958379711-6800545136610614584-n.jpg" alt="Campus Event">
+                <img src="../images/2-whatsapp-image-2024-11-27-at-13.09.38.jpeg" alt="MCAST Activities">
+                <img src="../images/71984855de2f9370f63c21191fa24a605cf0472f-1719560194-355248b0-960x640.jpg"
+                    alt="Learning Environment">
+                <img src="../images/786ce8d7e9e3dd93b1bd9a67657f84057e12d826-1656511691-1d962688-1920x1280.jpg"
+                    alt="Student Collaboration">
+                <img src="../images/img-2753.jpg" alt="MCAST Interior">
+                <img src="../images/lr-mct-2648.jpg" alt="Vocational Training">
+                <img src="../images/pik1-22-scaled-1.jpg" alt="Campus Grounds">
+                <img src="../images/whatsapp-image-2023-05-19-at-12.50.02.jpeg" alt="College Life">
+                <img src="../images/a2668adb72d34369b9d5c5f71947e916373fe809-1733483760-a5e98829-960x640.jpg"
+                    alt="Educational Event">
+                <img src="../images/mcast.jpeg" alt="MCAST Building">
+            </div>
         </section>
     </main>
 
