--- a/pages/services.html
+++ b/pages/services.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="container">
-            <h1>Our Services</h1>
+            <a href="../index.html" aria-label="MCAST Home">
+                <img src="../images/logo-white-background.jpg" alt="MCAST Logo" class="logo">
+            </a>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
@@ -26,8 +28,23 @@
 
     <main>
         <section>
-            <h2>What We Offer</h2>
-            <p>Welcome to the Services page. Explore the variety of services we provide.</p>
+            <h2>Our Institutes</h2>
+            <img src="../images/zig-6733-scaled.jpg" alt="MCAST Students" class="content-img">
+            <p>MCAST provides top-tier vocational education through its specialized Institutes, offering a wide range of
+                courses from Applied Sciences to Creative Arts:</p>
+            <ul class="service-list">
+                <li>Institute of Applied Sciences</li>
+                <li>Institute for the Creative Arts</li>
+                <li>Institute of Engineering and Transport</li>
+                <li>Institute of Business Management and Commerce</li>
+                <li>Institute of Community Services</li>
+                <li>Institute of Information and Communication Technology</li>
+                <li>Gozo Campus</li>
+                <li>The New Institute for the Trades</li>
+            </ul>
+            <p>These institutes provide all the technical and professional expertise towards the delivery of the
+                programmes at MCAST, maintaining a healthy dialogue with all interested stakeholders to provide the best
+                programmes for the needs of the local economy and society.</p>
         </section>
     </main>
 
